# dicom.lens

./: .gitignore  .lintstagedrc.json  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: codeql.yml
docs/: package-lock.json  package.json
ml/: pyproject.toml
ml/notebooks/: age_estimation_exploration.ipynb  breast_cancer_exploration.ipynb  exploration.ipynb
ml/scripts/: train.py
ml/scripts/tasks/: age_estimation.py  breast_cancer.py
plataform/api/: package.json
plataform/front/: package.json
web/front/: package.json
